--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,16 +1,20 @@
-// main: _material.scss
-
-@keyframes input-highlight {
-    0% {
-        left: 20%;
-        width: 20%;
-    }
-    99% {
-        width: 0;
-        left: 0;
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+@keyframes fadeIn {
+    from    { opacity: 0.3;  }
+    to    { opacity: 1.0;  }
 }
+@keyframes fadeOut {
+    from    { opacity: 1.0;  }
+    to    { opacity: 0;  }
+}
+
+.searchresults-container{
+  -webkit-transition: 0.5s linear all;
+  -moz-transition: 0.5s linear all;
+  -o-transition: 0.5s linear all;
+  transition: 0.5s linear all;
+}
+
+.ng-enter                   { opacity: 0; z-index: 100; }
+.ng-enter.ng-enter-active   { opacity: 1 }
+.ng-leave                   { opacity: 1; z-index: 101; }
+.ng-leave.ng-leave-active   { opacity: 0; }
