--- a/sass/datepicker/_datepicker.scss
+++ b/sass/datepicker/_datepicker.scss
@@ -1,98 +1,79 @@
+.datepickerContainer{
+    min-height: 253px;
+}
 div.datepicker {
-    position: relative;
-    font-size: 14px;
-    position: absolute;
-    cursor: default;
     top: 0;
     left: 0;
-    display: none;
-}
-.datepickerContainer {
-    background: #f5f5f5;
     position: absolute;
-    padding: 15px;
-    box-sizing: content-box;
-    box-shadow: 0 3px 6px rgba(0,0,0,.16),0 3px 6px rgba(0,0,0,.23);
+    display: none;
+    z-index: 9;
+}
+.datepickerHelp{
+    color: $main;
+    margin-bottom: 4px;
+
+    &.vertrek{
+        text-align: right;
+    }
 }
 .datepickerHidden {
     display: none;
 }
 div.datepicker table {
     border-collapse:collapse;
+    margin: 0;
 }
 div.datepicker a {
-    color: #333;
+    color: #555;
     text-decoration: none;
-    cursor: default;
     outline: none;
     display: inline-block;
     padding: 4px;
     box-sizing: content-box;
 }
 div.datepicker table td {
-    text-align: right;
+    text-align: center;
     padding: 0;
     margin: 0;
 }
 div.datepicker th {
     text-align: center;
-    color: #999;
     font-weight: normal;
 }
 div.datepicker tbody th {
-    text-align: left;
+    text-align: center;  
+    padding-bottom: 8px;
+    vertical-align: top;
+}
+div.datepicker .datepickerDoW th{
+    color: $main;
 }
 div.datepicker tbody a {
     display: block;
 }
 .datepickerDays{
     td{
-        border: 1px solid #ddd;
+        border: 3px solid $main_bg;
     }
     
     a {
-        width: 20px;
+        background: #fff;
         line-height: 16px;
-        height: 16px;
-        padding-right: 2px;
+        cursor: default;
+        color: #333;
     }
 }
 .datepickerYears a,
 .datepickerMonths a{
-    width: 44px;
     line-height: 36px;
     height: 36px;
     text-align: center;
 }
 td.datepickerNotInMonth a {
     color: #666;
+    background: rgba(255, 255, 255, .6);
 }
-tbody.datepickerDays td.datepickerSelected{
-    background: $orange;
-    
-    a{
-        color: #fff;
-    }
-}
-tbody.datepickerDays td.datepickerNotInMonth.datepickerSelected {
-    background: lighten($orange, 10);
-}
-tbody.datepickerYears td.datepickerSelected,
-tbody.datepickerMonths td.datepickerSelected{
-    background: #17384d;
-}
-div.datepicker a:hover,
-div.datepicker a:hover {
-    background: darken($orange, 10);
-    color: #fff;
-    cursor: pointer;
-}
-div.datepicker td.datepickerNotInMonth a:hover {
-    color: #999;
-}
-div.datepicker tbody th {
-    text-align: left;
-}
+
 .datepickerSpace div {
     width: 20px;
 }
@@ -102,6 +83,10 @@ div.datepicker tbody th {
     text-align: center;
     height: 20px;
     line-height: 20px;
+
+    span span{
+        position: relative; 
+    }
 }
 .datepickerGoNext a {
     float: right;
@@ -134,6 +119,7 @@ table.datepickerViewYears tr.datepickerDoW {
 td.datepickerDisabled a,
 td.datepickerDisabled.datepickerNotInMonth a{
     color: #333;
+    background: none;
 }
 td.datepickerDisabled a:hover {
     color: #333;
@@ -143,4 +129,37 @@ td.datepickerSpecial a {
 }
 td.datepickerSpecial.datepickerSelected a {
     background: #a00;
+}
+
+.sr-search, body > .datepicker, .sr-book{
+    .datepickerContainer {
+        background: $main_bg;
+        padding: 15px;
+        box-sizing: content-box;
+        box-shadow: 0 3px 6px rgba(0,0,0,.16),0 3px 6px rgba(0,0,0,.23);
+    }
+
+    tbody.datepickerDays td.datepickerSelected,
+    tbody.datepickerDays td:hover{
+        
+        a{
+            background: $blue;
+            color: #fff;
+        }
+    }
+    tbody.datepickerDays td.datepickerNotInMonth.datepickerSelected {
+        
+    }
+    tbody.datepickerYears td.datepickerSelected,
+    tbody.datepickerMonths td.datepickerSelected{
+        background: #17384d;
+    }
+    div.datepicker a:hover,
+    div.datepicker a:hover {
+        background: darken($main, 10);
+        color: #fff;
+    }
+    div.datepicker td.datepickerNotInMonth a:hover {
+        color: #999;
+    }   
 }
